--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,4 @@ theme: landscape
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
-deploy:
-  type:git
-  repository: https://github.com/fenfenzhong92/fenfenzhong92.github.io.git
-  branch: master
+deploy:type: git  repository: https://github.com/leopardpan/leopardpan.github.io.git  branch: master
